--- a/YManage/war/YManage.css
+++ b/YManage/war/YManage.css
@@ -15,6 +15,23 @@ h1 {
   font-size: 16pt;
 }
 
+.tvc-center-align {
+    margin-left: auto;
+    margin-right: auto;
+    align: center;
+}
+
+.tvc-margin5px {
+	margin: 5px
+}
+
+.tvc-status-bar {
+  border-style: solid;
+  border-color: gray;
+  border-width: 1px 0px 0px 0px;
+  padding: 5px
+}
+
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
   width: 400px;
